--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "server",
+  "name": "task-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Tasker Server",
   "main": "server.js",
   "scripts": {
-    "start": "node Server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "",
+  "author": "Moitri Hazra",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3"
   }
 }
