--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URL =mongodb+srv://moitrihazra2000:8942898688@cluster0.66xaolb.mongodb.net/Tasker?retryWrites=true&w=majority
+MONGODB_URL =mongodb+srv://moitrihazra2000:a96v3wLYYx4wC2U6@cluster0.66xaolb.mongodb.net/Tasker?retryWrites=true&w=majority
